--- a/src/index.scss
+++ b/src/index.scss
@@ -2,20 +2,38 @@
   font-size: 16px;
   font-family: "Helvetica", "Microsoft YaHei UI", serif;
 }
+@media screen and (max-width: 1280px) {
+  :root {
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 1120px) {
+  :root {
+    font-size: 12px;
+  }
+}
+.page-content {
+  width: 80rem;
+}
+
 html,body,#root,.App {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
-  .App {
-    position: relative;
-  }
+}
+.App {
+  min-width: 75rem;
+  position: relative;
 }
 
 .flex {
   display: flex;
-  align-items: center;
+  &-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 html{
